--- a/tickevents-placeholder/src/app/home/home.component.html
+++ b/tickevents-placeholder/src/app/home/home.component.html
@@ -5,8 +5,8 @@
 		<div class="col">
 			<!-- background -->
 			<div class="row mnh-100 svg-header no-gutters">
-				<div class="col bg-1"></div>
-				<div class="col bg-2">
+				<div class="col bg-blue"></div>
+				<div class="col bg-pink">
 					<svg viewBox="0 0 88 1024" orientation="vertical" class="svg-divider">
 						<path
 							d="M0,0h45.07891c58.40593,190.38815,58.40593,361.05481,0,512s-58.40593,321.61188,0,512H0V0z">
