--- a/tickevents-placeholder/src/styles.css
+++ b/tickevents-placeholder/src/styles.css
@@ -34,3 +34,8 @@ body {
     padding-top: 100px;
     padding-bottom: 100px;
 }
+
+.section-title {
+    font-family: 'Alata', sans-serif !important;
+    font-weight: 500;
+}
