--- a/tickevents-placeholder/src/app/pricing/pricing.component.html
+++ b/tickevents-placeholder/src/app/pricing/pricing.component.html
@@ -53,11 +53,11 @@
             <div class="row justify-content-center no-gutters my-5">
                 <div class="col-12">
                     <h1 class="title text-center blue">Onze servicekosten</h1>
-                    <p class="blue text-center">Bij Tickevents bepaal je zelf wie de kosten betaald: Jij, of je klanten. Zo kan je de prijs laag houden óf je winst maximaliseren. </p>
+                    <p class="blue text-center">Bij Tickevents bepaal je zelf wie de kosten betaald: Jij, of je klanten. Zo kan je de prijs laag houden voor je klanten óf je winst maximaliseren. </p>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-12 col-md-5 price-box h-100 mr-4">
+                <div class="col-12 col-lg-5 order-2 order-lg-1 price-box h-100 ml-0 ml-lg-4 mt-5 mt-lg-0">
                     <div class="row justify-content-center mt-4">
                         <div class="col-12">
                             <h1 class="price-title section-title fs-xxl text-center"><b>Gratis Tickets</b></h1>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-5 price-box mnh-30vh ml-4">
+                <div class="col-12 col-lg-5 price-box mnh-30vh mr-0 mr-lg-4"> 
                     <div class="row justify-content-center mt-4">
                         <div class="col-12">
                             <h1 class="price-title section-title fs-xxl text-center"><b>Ticketshop</b></h1>
