Completed pricing page

--- a/tickevents-placeholder/src/app/pricing/pricing.component.css
+++ b/tickevents-placeholder/src/app/pricing/pricing.component.css
@@ -35,11 +35,10 @@ input {
 
 /* Price information section */
 .price-box {
-    /* background: linear-gradient(90deg, #ED9696, #F0A8A8); */
-    /* color: white; */
     border-radius: 25px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     transition-duration: 0.3s;
+    background-color: white;
 }
 
 .price-box:hover {
@@ -48,28 +47,60 @@ input {
     transition-duration: 0.5s;
 }
 
+.price-box-left {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    z-index: 1;
+}
+
+.price-box-right {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    z-index: 1;
+}
+
+.price-box-center {
+    margin-left: -50px !important;
+    margin-right: -50px !important;
+    z-index: 2;
+}
+
+.price-box-left,
+.price-box-right {
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    opacity: 0;
+}
+
+.bg-pink {
+     background: linear-gradient(120deg, #ED9696, #F0A9A9)
+}
 
 .section-title {
     font-family: 'Alata', sans-serif !important;
     font-weight: 500;
 }
 
-.helper {
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
+.service-costs {
+    font-size: 1.8em !important;
 }
 
 ol {
     counter-reset: number-counter;
     list-style: none;
     padding-left: 40px;
+    margin-bottom: 0;
 }
 
 ol li {
-    margin: 0 0 2rem 0;
+    margin: 0 0 1.5rem 0;
     counter-increment: number-counter;
     position: relative;
+    font-size: 1.1em
+}
+
+ol li:last-child {
+    margin-bottom: 0;
 }
 
 ol li::before {
@@ -85,11 +116,18 @@ ol li::before {
     width: var(--size);
     height: var(--size);
     top: 0;
-    transform: rotate(-10deg);
     background: linear-gradient(90deg, #EA8585, #ED9696);
     ;
     border-radius: 50%;
     text-align: center;
+}
+
+.opacity-1 {
+    opacity: 1;
+}
+
+.opacity-0 {
+    opacity: 0
 }
 /* End price information section */
 
@@ -123,6 +161,28 @@ ol li::before {
 
     .mnh-50vh {
         min-height: 50% !important;
+    }
+}
+
+/* lg-breakpoint */
+@media (min-with: 992px) {
+    ol li {
+        margin-bottom: 2rem !important;
+    }
+
+
+}
+
+@media (max-width: 991px) {
+    .price-box-left,
+    .price-box-right {
+        animation: none;
+    }
+
+    .price-box-left,
+    .price-box-right,
+    .price-box-center {
+        opacity: 1 !important;
     }
 }
 /* End media queries */
