--- a/tickevents-placeholder/src/app/pricing/pricing.component.html
+++ b/tickevents-placeholder/src/app/pricing/pricing.component.html
@@ -8,7 +8,8 @@
 					<div class="row h-100 no-gutters">
 						<div class="col-12">
 							<h1 class="w title ft-montserrat" [ngsReveal]="scrollUpTitle">1 EURO. ALTIJD. OVERAL.</h1>
-							<p class="w subtitle" [ngsReveal]="scrollUpDelay">Bij Tickevents betaal je altijd 1 euro per ticket, zonder dat je
+							<p class="w subtitle" [ngsReveal]="scrollUpDelay">Bij Tickevents betaal je altijd 1 euro per
+								ticket, zonder dat je
 								onverwachte kosten op je dak krijgt. Daarom zijn onze servicekosten inclusief
 								transactiekosten én BTW.</p>
 						</div>
@@ -18,7 +19,8 @@
 			<div class="row mnh-50vh my-5 mt-md-0 no-gutters justify-content-end align-content-end">
 				<div class="col-12 col-md-8">
 					<h4 class="w title text-right" [ngsReveal]="scrollUpTitle"><b>Bereken je prijs</b></h4>
-					<p class="text-right w fs-l bereken" [ngsReveal]="scrollUpDelay">Wil je weten hoeveel servicekosten jij of je klant betaald per
+					<p class="text-right w fs-l bereken" [ngsReveal]="scrollUpDelay">Wil je weten hoeveel servicekosten
+						jij of je klant betaald per
 						ticket?</p>
 					<div class="row no-gutters justify-content-center" [ngsReveal]="scrollUpDelay">
 						<div class="col-5 col-sm-4 row no-gutters h-auto">
@@ -44,7 +46,7 @@
 							</h6>
 						</div>
 					</div>
-					<div class="row no-gutters justify-content-end mt-4"  [ngsReveal]="scrollUpDelay">
+					<div class="row no-gutters justify-content-end mt-4" [ngsReveal]="scrollUpDelay">
 						<div class="col-12 col-sm-6 col-lg-5 ">
 							<a type="button" class="btn w-100" routerLink="/getting-started">Maak je evenement</a>
 						</div>
@@ -57,11 +59,14 @@
 	<div class="row no-gutters section-padding">
 		<div class="container px-4 px-md-0">
 
-			<div class="row justify-content-center no-gutters mb-5"  [ngsReveal]="scrollUpDelay">
+			<div class="row justify-content-center no-gutters mb-5" [ngsReveal]="scrollUpDelay">
 				<div class="col-12">
 					<h1 class="title text-center blue">Onze servicekosten</h1>
-					<p class="blue text-center fs-l">Bij Tickevents bepaal je zelf wie de kosten betaald: Jij, of je klanten.
-						Zo kan je de prijs laag houden voor je klanten óf je winst maximaliseren. We proberen altijd zo transparant mogelijk te zijn, daarom zijn al onze prijzen altijd inclusief BTW en transactiekosten.</p>
+					<p class="blue text-center fs-l">Bij Tickevents bepaal je zelf wie de kosten betaald: Jij, of je
+						klanten.
+						Zo kan je de prijs laag houden voor je klanten óf je winst maximaliseren. We proberen altijd zo
+						transparant mogelijk te zijn, daarom zijn al onze prijzen altijd inclusief BTW en
+						transactiekosten.</p>
 				</div>
 			</div>
 
@@ -87,10 +92,11 @@
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="col-12 align-self-end">
 							<hr class="m-0">
-							<a type="button" class="btn w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de slag</a>
+							<a type="button" class="btn w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de
+								slag</a>
 						</div>
 
 					</div>
@@ -120,10 +126,11 @@
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="col-12 align-self-end">
 							<hr class="m-0">
-							<a type="button" class="btn w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de slag</a>
+							<a type="button" class="btn w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de
+								slag</a>
 						</div>
 
 					</div>
@@ -133,9 +140,9 @@
 					<div class="price-box h-100 row no-gutters px-3 pr-lg-3 pl-lg-5">
 
 						<div class="col-12 mt-4 mt-lg-5">
-								<h1 class="price-title section-title fs-xxl text-center"><b>Grande</b></h1>
-								<p class="text-center price-subtitle fs-m">5000+ tickets</p>
-								<h5 class="section-title text-center mb-0">Servicekosten: Aangepast</h5>
+							<h1 class="price-title section-title fs-xxl text-center"><b>Grande</b></h1>
+							<p class="text-center price-subtitle fs-m">5000+ tickets</p>
+							<h5 class="section-title text-center mb-0">Servicekosten: Aangepast</h5>
 							<hr class="mt-4 mt-lg-5 mb-0">
 						</div>
 
@@ -143,17 +150,18 @@
 							<div class="row no-gutters h-100 align-content-center">
 								<div class="col-12">
 									<ol>
-										<li>Alles uit Premium</li> 
+										<li>Alles uit Premium</li>
 										<li>Op maat gemaakte afspraken en inrichting</li>
 										<li>Aangepaste servicekosten</li>
 									</ol>
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="col-12 align-self-end">
 							<hr class="m-0">
-							<a type="button" class="btn w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de slag</a>
+							<a type="button" class="btn w-100 my-4 my-lg-5" routerLink="/getting-started">Aan de
+								slag</a>
 						</div>
 
 					</div>
@@ -168,19 +176,22 @@
 				<div class="col-12 col-md-5">
 					<div class="row h-100 no-gutters align-content-center">
 						<div class="col-12">
-							<h2 class="section-title" [ngsReveal]="scrollUpTitle">Waar bestaan de servicekosten uit?</h2>
-							<p [ngsReveal]="scrollUpDelay">Onze lage servicekosten bestaan uit de transactiekosten van een ticket + de
+							<h2 class="section-title" [ngsReveal]="scrollUpTitle">Waar bestaan de servicekosten uit?
+							</h2>
+							<p [ngsReveal]="scrollUpDelay">Onze lage servicekosten bestaan uit de transactiekosten van
+								een ticket + de
 								BTW over
 								het resterende bedrag. Als je de BTW terug kan vragen, kom je dus op een nóg voordeliger
 								bedrag
 								uit!</p>
 							<br>
-							<p [ngsReveal]="scrollUpDelay"> De servicekosten bestaan onder andere uit de hosting van het platform en het
+							<p [ngsReveal]="scrollUpDelay"> De servicekosten bestaan onder andere uit de hosting van het
+								platform en het
 								mogelijk maken van nieuwe technische ontwikkelingen.</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-md-6"  [ngsReveal]="scrollUpDelay">
+				<div class="col-12 col-md-6" [ngsReveal]="scrollUpDelay">
 					<highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions"
 						style="width: 100%; height: 400px; display: block;">
 					</highcharts-chart>
@@ -223,8 +234,7 @@
 			</div>
 			<div class="row no-gutters justify-content-center">
 				<div class="col-12 col-md-8 px-5 px-sm-0">
-					<img src="../../assets/sales process.svg" alt="sales process"
-					class="w-100 h-100 d-none d-sm-block">
+					<img src="../../assets/sales process.svg" alt="sales process" class="w-100 h-100 d-none d-sm-block">
 					<img src="../../assets/sales process vertical.svg" alt="sales process"
 						class="w-100 h-100 d-block d-sm-none">
 				</div>
