--- a/tickevents-placeholder/src/app/home/chevron/chevron.component.css
+++ b/tickevents-placeholder/src/app/home/chevron/chevron.component.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /* Chevron */
 .chevron-padding {
     padding-bottom: 85px;
@@ -17,16 +24,20 @@
     width: 28px;
     height: 8px;
     opacity: 0;
-    transform: scale3d(0.5, 0.5, 0.5);
-    animation: move 3s ease-out infinite;
+    -webkit-transform: scale3d(0.5, 0.5, 0.5);
+            transform: scale3d(0.5, 0.5, 0.5);
+    -webkit-animation: move 3s ease-out infinite;
+            animation: move 3s ease-out infinite;
 }
 
 .chevron:first-child {
-    animation: move 3s ease-out 1s infinite;
+    -webkit-animation: move 3s ease-out 1s infinite;
+            animation: move 3s ease-out 1s infinite;
 }
 
 .chevron:nth-child(2) {
-    animation: move 3s ease-out 2s infinite;
+    -webkit-animation: move 3s ease-out 2s infinite;
+            animation: move 3s ease-out 2s infinite;
 }
 
 .chevron:before,
@@ -41,13 +52,17 @@
 
 .chevron:before {
     left: 0;
-    transform: skew(0deg, 30deg);
+    -webkit-transform: skew(0deg, 30deg);
+        -ms-transform: skew(0deg, 30deg);
+            transform: skew(0deg, 30deg);
 }
 
 .chevron:after {
     right: 0;
     width: 50%;
-    transform: skew(0deg, -30deg);
+    -webkit-transform: skew(0deg, -30deg);
+        -ms-transform: skew(0deg, -30deg);
+            transform: skew(0deg, -30deg);
 }
 
 .chevron-text {
@@ -60,7 +75,32 @@
     text-transform: uppercase;
     white-space: nowrap;
     opacity: .25;
-    animation: pulse 2s linear alternate infinite;
+    -webkit-animation: pulse 2s linear alternate infinite;
+            animation: pulse 2s linear alternate infinite;
+}
+
+@-webkit-keyframes move {
+    25% {
+        opacity: 1;
+    }
+
+    33% {
+        opacity: 1;
+        -webkit-transform: translateY(30px);
+                transform: translateY(30px);
+    }
+
+    67% {
+        opacity: 1;
+        -webkit-transform: translateY(40px);
+                transform: translateY(40px);
+    }
+
+    100% {
+        opacity: 0;
+        -webkit-transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+                transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+    }
 }
 
 @keyframes move {
@@ -70,17 +110,26 @@
 
     33% {
         opacity: 1;
-        transform: translateY(30px);
+        -webkit-transform: translateY(30px);
+                transform: translateY(30px);
     }
 
     67% {
         opacity: 1;
-        transform: translateY(40px);
+        -webkit-transform: translateY(40px);
+                transform: translateY(40px);
     }
 
     100% {
         opacity: 0;
-        transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+        -webkit-transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+                transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+    }
+}
+
+@-webkit-keyframes pulse {
+    to {
+        opacity: 1;
     }
 }
 
