--- a/tickevents-placeholder/src/app/pricing/pricing.component.css
+++ b/tickevents-placeholder/src/app/pricing/pricing.component.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /* First section */
 .bg-pricing {
     background-image: url(../../assets/bd-1.svg);
@@ -36,15 +43,23 @@ input {
 /* Price information section */
 .price-box {
     border-radius: 25px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transition-duration: 0.3s;
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-transition-duration: 0.3s;
+         -o-transition-duration: 0.3s;
+            transition-duration: 0.3s;
     background-color: white;
 }
 
 .price-box:hover {
-    transform: scale(0.99);
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-    transition-duration: 0.5s;
+    -webkit-transform: scale(0.99);
+        -ms-transform: scale(0.99);
+            transform: scale(0.99);
+    -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+    -webkit-transition-duration: 0.5s;
+         -o-transition-duration: 0.5s;
+            transition-duration: 0.5s;
 }
 
 .price-box-left {
@@ -67,12 +82,15 @@ input {
 
 .price-box-left,
 .price-box-right {
-    animation-duration: 1.5s;
-    animation-timing-function: ease-in-out;
+    -webkit-animation-duration: 1.5s;
+            animation-duration: 1.5s;
+    -webkit-animation-timing-function: ease-in-out;
+            animation-timing-function: ease-in-out;
     opacity: 0;
 }
 
 .bg-pink {
+     background: -o-linear-gradient(330deg, #ED9696, #F0A9A9);
      background: linear-gradient(120deg, #ED9696, #F0A9A9)
 }
 
@@ -116,6 +134,8 @@ ol li::before {
     width: var(--size);
     height: var(--size);
     top: 0;
+    background: -webkit-gradient(linear, left top, right top, from(#EA8585), to(#ED9696));
+    background: -o-linear-gradient(left, #EA8585, #ED9696);
     background: linear-gradient(90deg, #EA8585, #ED9696);
     ;
     border-radius: 50%;
@@ -176,7 +196,8 @@ ol li::before {
 @media (max-width: 991px) {
     .price-box-left,
     .price-box-right {
-        animation: none;
+        -webkit-animation: none;
+                animation: none;
     }
 
     .price-box-left,
