--- a/tickevents-placeholder/src/app/shared/header/header.component.css
+++ b/tickevents-placeholder/src/app/shared/header/header.component.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 .navbar {
     background-color: white;
     height: 75px !important;
@@ -33,22 +40,34 @@
     color: white;
     /* font-weight: 500; */
     /* font-size: 1.1em; */
-    transition-duration: 0s;
+    -webkit-transition-duration: 0s;
+         -o-transition-duration: 0s;
+            transition-duration: 0s;
     border-radius: 10px;
     height: 45px;
     padding: 8px;
-    box-shadow: 0 5px #9AC1B2;
+    -webkit-box-shadow: 0 5px #9AC1B2;
+            box-shadow: 0 5px #9AC1B2;
+    -webkit-transition: background-color 0.2s ease;
+    -o-transition: background-color 0.2s ease;
     transition: background-color 0.2s ease;
 }
 
 .btn:hover {
     background-color: #467261;
+    -webkit-transition: background-color 0.2s ease;
+    -o-transition: background-color 0.2s ease;
     transition: background-color 0.2s ease;
 }
 
 .btn:active {
     background-color: #467261;
-    box-shadow: 0 3px #294F53;
-    transform: translateY(4px);
+    -webkit-box-shadow: 0 3px #294F53;
+            box-shadow: 0 3px #294F53;
+    -webkit-transform: translateY(4px);
+        -ms-transform: translateY(4px);
+            transform: translateY(4px);
+    -webkit-transition: background-color 0.2s ease;
+    -o-transition: background-color 0.2s ease;
     transition: background-color 0.2s ease;
 }
